@@ -84,4 +84,15 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <label for="si">Disable notification for unit ending:</label>
+    <div class="toggle-switch">
+      <input name="nr"
+             type="checkbox"
+             id="nr"
+             [(ngModel)]="os.noResourceEndPopUp">
+      <label for="nr"></label>
+    </div>
+  </div>
+
 </form>
